[MOD] Use JDK helpers: transferTo, readNBytes, Math.clamp/floorMod